[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = ""
authors = ["Alex Newton <sharenfan222@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.3.0"
numpy = "^1.24.1"
pywin32 = "^305"
opencv-python = "^4.7.0.68"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
